added env variables and changed code style

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,11 @@ DB_USER=eventapp
 DB_PASS=event_43app
 DB_HOST=ls-748579094099b0766a964caacd8cc4a4b73ec231.czwhjvdkncwk.us-east-2.rds.amazonaws.com
 DB_PORT=3306
+KEY = 'event-app'
+SECRET = 'EVENT-EVOLVER-APP'
+CLIENTID = '986009116519-uja9lusjosejc3fgp8hmmauct1ketk4q.apps.googleusercontent.com'
+CLIENTSECRET = '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'
+URLGOOGLE = 'http://www.localhost:8080/auth/callback/google'
+URLTWITTER = 'http://www.localhost:8080/auth/callback/twitter'
+CONSUMERKEY = '8Z7XIKhBQ0PeKfYi0GMIwmvBx'
+CONSUMERSECRET = 'Z7OK3fqaYXt8Voys2AhlysNFFXMGrLR6e9Hd1nOrqRPAohZSQ0'
