--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Evolver events app",
   "main": "app.js",
+  "type": "module",
   "directories": {
     "test": "tests"
   },
