--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@babel/plugin-transform-modules-commonjs": "^7.22.15",
     "@babel/preset-env": "^7.22.20",
     "babel-jest": "^29.7.0",
+    "express-validator": "^7.0.1",
+    "http-status-codes": "^2.3.0",
     "prettier": "^3.0.3"
   }
 }
