--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "http-status-codes": "^2.3.0",
+    "jest": "^29.7.0",
     "joi": "^17.10.2",
     "mysql2": "^3.6.1",
     "passport": "^0.6.0",
@@ -43,6 +44,7 @@
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.20",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3"
   }
